Sigil v0.3.0 ADD_DATE
    - fixed a randomly occurring crash, usually triggered on Macs during loading (issue #643) 

Sigil v0.3.0RC2 2010.10.08
    - fixed a file-corruption-on-save issue caused by XHTML files being saved in UTF-8, but
    declared as UTF-16 (issue #617)

Sigil v0.3.0RC1 2010.10.08
    - fixed a validation issue caused by using the American spelling for "acknowledgments" where
    the OPF spec uses the British "acknowledgements" (issue #611)
    - Sigil now uses "application/x-font-ttf" as the media type in the OPF for TrueType fonts
    (issue #609)
    - on Mac OS X, the universal build now includes an x64 version of Sigil, and builds now
    use Cocoa instead of Carbon; support for Mac OS X 10.4 is dropped along with support for
    PowerPC Macs
    - fixed a problem with opening files from the Ubuntu "Open With" menu (issue #524)
    - made Tidy handle common user errors like "&co." in the HTML source instead of "&amp;co."
    - fixed a rare Tidy bug with disappearing spaces when the only whitespace in an element was 
    the newline following a start tag (issue #387)
    - changed the internal DOM engine from Qt's QDom to Xerces; this should also bring numerous
    bug fixes and performance improvements plus a small (~10%) decrease in memory consumption
    (issue #367)
    - updated Qt to 4.7: this should bring a 400%+ performance increase in Book View rendering 
    along with countless smaller performance improvements and bug fixes across the board
    - switched to the MSVC 10 compiler for Windows releases; should bring ~5% general performance 
    improvement 
    - fixed several crash/error problems relating to opening, saving and modifying epub files which
    have onerous file permissions set for internal content files (issue #574)
    - added a workaround for broken epubs created by other epub-producing software which caused
    a crash on certain searches with the Find dialog (issue #548)